[package]
name = "fdp"
version = "0.1.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Safe bindings for libFDP (Fast Debugging Protocol)"
readme = "README.md"
homepage = "https://github.com/Wenzel/fdp"
repository = "https://github.com/Wenzel/fdp"
license = "GPL-3.0-only"
keywords = ["FDP", "Introspection", "VirtualBox", "VMI"]
categories = ["api-bindings"]

[dependencies]
log = "0.4.8"
fdp-sys = "0.1.1"
custom_error = "1.7.1"
libloading = "0.6.1"
