[package]
name = "fdp"
version = "0.2.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Safe bindings for libFDP (Fast Debugging Protocol)"
readme = "README.md"
homepage = "https://github.com/Wenzel/fdp"
repository = "https://github.com/Wenzel/fdp"
license = "GPL-3.0-only"
keywords = ["FDP", "Introspection", "VirtualBox", "VMI"]
categories = ["api-bindings"]

[dependencies]
log = "0.4.8"
fdp-sys = "0.1.1"
custom_error = "1.7.1"
libloading = "0.6.1"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"

[package.metadata.release]
# releases are managed by cargo release, but publication is done on the CI
# this metadata prevents a misuse when --skip-publish flag is missing from cargo
# release command line
disable-publish = true
